0.04

- Add a private writers for accessors created via has_one() and
  has_many() - this still needs docs.

- Make sure that the schema class's RunInTransaction() method returns
  values of the sub it runs, respecting the caller's context.

- has_one() can now accept a "handles" parameter which works just as
  it does for any Moose attribute.


0.03    2008-02-24

- Fix tests so that they skip without blowing up when DBD::SQLite is
  not installed.

- Fey::Object::Table would always issue a SELECT immediately after an
  INSERT. Now this will be delayed until it is needed. In some cases
  it will never be needed.


0.02    2008-02-21

- Renamed Fey::Object to Fey::Object::Table and added Fey::Object::Schema.

- Also created a Fey::Object::Schema->RunInTransaction() 

- Fey::Object::Schema lets you control caching for all table classes
  in a schema at once.

- Added support for arbitrary select statements being used with
  has_one() and has_many(). See Fey::ORM::Manual::Intro for some
  examples.

- Fixed various bits of code to work properly when multiple schema
  classes exist.


0.01    2008-02-09

- First version, released on an unsuspecting world.
